# impforge-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING-MCP.md  CONTRIBUTING-SKILLS.md  CONTRIBUTING-TEMPLATES.md  Cargo.toml  LICENSE  MCP-MANIFESTS-README.md  README.md  SECURITY.md  SKILLS-README.md  TEMPLATES-README.md
.github/workflows/: ci.yml  release.yml
brain/: Modelfile  README.md
crates/impforge-aiimp-updater/: Cargo.toml
crates/impforge-aiimp-updater/src/: main.rs  pubkey.rs  release.rs  verify.rs
crates/impforge-autonomy/: Cargo.toml
crates/impforge-autonomy/src/: doctor.rs  lib.rs  self_update.rs  watchdog.rs
crates/impforge-bench/: Cargo.toml
crates/impforge-bench/src/: lib.rs  module.rs  report.rs  runner.rs  tier1.rs  tier3.rs  tier4.rs
crates/impforge-cli/: Cargo.toml
crates/impforge-cli/src/: main.rs  runtime.rs  theme.rs
crates/impforge-cli/src/commands/: audit.rs  autopilot.rs  bench.rs  brain.rs  contribute.rs  crown_jewel.rs  digest.rs  doctor.rs  exec.rs  export.rs  generate.rs  ingest.rs  introspect.rs  mcp.rs  mcp_marketplace.rs  mod.rs  model.rs  provider.rs  remote.rs  search.rs  skill.rs  template.rs  update.rs  upgrade.rs
crates/impforge-contribute/: Cargo.toml
crates/impforge-contribute/src/: lib.rs  pr_builder.rs  validation.rs
crates/impforge-core/: Cargo.toml
crates/impforge-core/src/: config.rs  error.rs  lib.rs  manifest.rs  paths.rs
crates/impforge-crown-jewel/: Cargo.toml
crates/impforge-crown-jewel/src/: behavior.rs  dims.rs  kind_routing.rs  lib.rs  module.rs  report.rs  safety_prompt.rs  scanner.rs
crates/impforge-crown-jewel/tests/: safety_modelfile.rs
crates/impforge-emergence/: Cargo.toml
crates/impforge-emergence/src/: capability.rs  health.rs  lib.rs  memory.rs  module.rs  orchestrator.rs
crates/impforge-export/: Cargo.toml
crates/impforge-export/src/: lib.rs
crates/impforge-mcp-server/: Cargo.toml
crates/impforge-mcp-server/src/: auto_suspend.rs  catalog_validator.rs  functional_probe.rs  lazy_schema.rs  lib.rs  registration.rs  server.rs  transport.rs
crates/impforge-mcp-server/tests/: catalog_all_manifests.rs
crates/impforge-models/: Cargo.toml
crates/impforge-models/src/: backend.rs  lib.rs  ollama.rs
crates/impforge-remote/: Cargo.toml
crates/impforge-remote/src/: allowlist.rs  bridge.rs  lib.rs  module.rs  telegram.rs
crates/impforge-scaffold/: Cargo.toml
crates/impforge-scaffold/src/: lib.rs
crates/impforge-universal/: Cargo.toml
crates/impforge-universal/src/: errors.rs  lib.rs  registry.rs  security_gateway.rs  tool.rs
crates/impforge-universal/src/consumers/: anthropic.rs  gbnf.rs  gemini.rs  mcp_pass.rs  mod.rs  openai.rs  react.rs
crates/impforge-universal/src/providers/: mcp_client.rs  mcp_live.rs  mod.rs
mcp-manifests-spec/: compliance-rules.json.v1.md  skill.md.v1.md  template.json.v1.md
mcp-manifests/servers/: airtable.json  anthropic.json  asana.json  aws.json  bigquery.json  bitbucket.json  brave-search.json  browserbase.json  calendly.json  canva.json  chroma.json  cloudflare.json  cloudinary.json  confluence.json  context7.json  deepl.json  discord.json  docker.json  dropbox.json  elasticsearch.json  elevenlabs.json  everything.json  exa.json  fetch.json  figma.json  filesystem.json  firecrawl.json  git.json  github.json  gitlab.json  gmail.json  google-calendar.json  google-docs.json  google-drive.json  google-sheets.json  home-assistant.json  hubspot.json  huggingface.json  jira.json  kubernetes.json  (+50 more)
skills/example-template-search/: SKILL.md
templates/aerospace-backend/: README.md  compliance-rules.json  template.json
templates/aerospace-saas/: README.md  template.json
templates/aerospace-web/: README.md  package.json  template.json
templates/agriculture-backend/: README.md  template.json
templates/agriculture-saas/: README.md  template.json
templates/agriculture-web/: README.md  compliance-rules.json  package.json  template.json
templates/automotive-backend/: README.md  template.json
templates/automotive-saas/: README.md  compliance-rules.json  template.json
templates/automotive-web/: README.md  package.json  template.json
templates/construction-backend/: README.md  compliance-rules.json  template.json
templates/construction-saas/: README.md  template.json
templates/construction-web/: README.md  package.json  template.json
templates/cybersecurity-backend/: README.md  template.json
templates/cybersecurity-saas/: README.md  template.json
templates/cybersecurity-web/: README.md  compliance-rules.json  package.json  template.json
templates/education-backend/: README.md  compliance-rules.json  template.json
templates/education-saas/: LICENSE  README.md  template.json
templates/education-web/: README.md  package.json  template.json
templates/energy-backend/: README.md  compliance-rules.json  template.json
templates/energy-saas/: README.md  template.json
templates/energy-web/: README.md  package.json  template.json
templates/engines-backend/: README.md  template.json
templates/engines-saas/: README.md  compliance-rules.json  template.json
templates/engines-web/: README.md  package.json  template.json
templates/example-todo-app/: README.md  package.json  template.json
templates/fintech-backend/: README.md  template.json
templates/fintech-saas/: README.md  template.json
templates/fintech-web/: README.md  compliance-rules.json  package.json  template.json
templates/food-backend/: README.md  template.json
templates/food-saas/: README.md  compliance-rules.json  template.json
templates/food-web/: README.md  package.json  template.json
templates/government-backend/: README.md  template.json
templates/government-saas/: .env.example  README.md  template.json
templates/government-web/: README.md  compliance-rules.json  package.json  template.json
templates/healthcare-backend/: README.md  template.json
templates/healthcare-saas/: README.md  template.json
templates/healthcare-web/: README.md  compliance-rules.json  package.json  template.json
templates/hospitality-backend/: README.md  template.json
(+196 files in other folders)
