# SPDX-License-Identifier: MIT
[workspace]
resolver = "2"
members = [
    "crates/impforge-cli",
    "crates/impforge-core",
    "crates/impforge-scaffold",
    "crates/impforge-models",
    "crates/impforge-mcp-server",
    "crates/impforge-contribute",
    "crates/impforge-export",
    "crates/impforge-autonomy",
    "crates/impforge-emergence",
    "crates/impforge-aiimp-updater",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["ImpForge Maintainers <hello@impforge.com>"]
homepage = "https://impforge.com"
repository = "https://github.com/AiImpDevelopment/impforge-cli"
description = "MCP-native AI coding companion · 78 templates · 2 600 compliance rules · works with every AI tool · local-model-first"
readme = "README.md"
keywords = ["ai", "cli", "mcp", "templates", "scaffolding"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
ratatui = "0.28"
crossterm = "0.28"

# Async / HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"

# Serde / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
hex = "0.4"
rand = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Filesystem / path
dirs = "5"
walkdir = "2"
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Local model integrations (optional features at the leaf crate)
ollama-rs = "0.2"
hf-hub = "0.3"
# llama_cpp and candle are opt-in via feature flags inside impforge-models

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
