# SPDX-License-Identifier: MIT
[workspace]
resolver = "2"
members = [
    "crates/impforge-cli",
    "crates/impforge-core",
    "crates/impforge-scaffold",
    "crates/impforge-models",
    "crates/impforge-mcp-server",
    "crates/impforge-contribute",
    "crates/impforge-export",
    "crates/impforge-autonomy",
    "crates/impforge-emergence",
    "crates/impforge-aiimp-updater",
    "crates/impforge-crown-jewel",
    "crates/impforge-bench",
    "crates/impforge-remote",
    "crates/impforge-universal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["ImpForge Maintainers <hello@impforge.com>"]
homepage = "https://impforge.com"
repository = "https://github.com/AiImpDevelopment/impforge-cli"
description = "MCP-native AI coding companion · 78 templates · 2 600 compliance rules · works with every AI tool · local-model-first"
readme = "README.md"
keywords = ["ai", "cli", "mcp", "templates", "scaffolding"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
ratatui = "0.28"
crossterm = "0.28"

# Async / HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"

# Serde / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
hex = "0.4"
rand = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Filesystem / path
dirs = "5"
walkdir = "2"
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

# Local model integrations (optional features at the leaf crate)
ollama-rs = "0.2"
hf-hub = "0.3"
# llama_cpp and candle are opt-in via feature flags inside impforge-models

# Global Digest — Feature 3 (Tier 1, ~CLI).  All MIT-compatible.
# - `notify` 8 = stable, cross-platform filesystem watcher.  v9 still RC.
# - `notify-debouncer-full` 0.7 = batches rapid file events + dedups,
#   so a single editor save (Modify+Write+Close) doesn't trigger three
#   ingest passes.  Pinned 0.7 (last stable for notify-8); upstream's
#   0.8 RC tracks notify-9 RC and we don't follow pre-release toolchains.
# - `feed-rs` 2 = pure-Rust feed parser handling Atom, RSS 2.0, RSS 1.0,
#   RSS 0.x, JSON Feed.  No network, just bytes-in / parsed-out.
# - `url` 2 = WHATWG URL parser, used to validate `add-feed` arguments.
notify = "8"
notify-debouncer-full = "0.7"
feed-rs = "2"
url = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
