# SPDX-License-Identifier: MIT
[package]
name = "impforge-autonomy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Autonomy layer for impforge-cli — self-update, doctor + self-heal, MCP watchdog, opt-in autopilot daemon."
readme = "../../README.md"

[dependencies]
impforge-core = { path = "../impforge-core" }
impforge-emergence = { path = "../impforge-emergence" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
