# SPDX-License-Identifier: MIT
[package]
name = "impforge-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Scientific benchmark runner that measures the uplift impforge-cli gives any local model vs raw Ollama.  4 tiers, pairwise AB, median-of-3 per prompt, signed JSON reports."
readme = "../../README.md"

[dependencies]
impforge-core = { path = "../impforge-core" }
impforge-emergence = { path = "../impforge-emergence" }
impforge-models = { path = "../impforge-models" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
