# SPDX-License-Identifier: MIT
[package]
name = "impforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "MCP-native AI coding companion · 78 templates · 2 600 compliance rules · works with every AI tool · local-model-first · MIT"
readme = "../../README.md"

[[bin]]
name = "impforge-cli"
path = "src/main.rs"

[features]
default = ["minimal"]
# Minimal binary — <3 MB, no TUI / Candle / llama.cpp.
minimal = []
# Beautiful TUI dashboard.
tui = ["dep:ratatui", "dep:crossterm"]
# Pure-Rust inference via Candle.
candle = []
# GGUF inference via llama.cpp FFI.
llamacpp = []
# Everything (used for `cargo install --features full`).
full = ["tui", "candle", "llamacpp"]

[dependencies]
impforge-core = { path = "../impforge-core" }
impforge-emergence = { path = "../impforge-emergence" }
impforge-scaffold = { path = "../impforge-scaffold" }
impforge-models = { path = "../impforge-models" }
impforge-mcp-server = { path = "../impforge-mcp-server" }
impforge-contribute = { path = "../impforge-contribute" }
impforge-export = { path = "../impforge-export" }
impforge-autonomy = { path = "../impforge-autonomy" }
impforge-crown-jewel = { path = "../impforge-crown-jewel" }
impforge-bench = { path = "../impforge-bench" }
impforge-remote = { path = "../impforge-remote" }
impforge-universal = { path = "../impforge-universal" }

clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# Optional TUI
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# Multi-provider BYOK chat — Feature 1.
# `genai` = unified provider abstraction (Anthropic + OpenAI + Gemini + Ollama
# + DeepSeek + xAI + Cohere ...). `keyring` = cross-platform OS keychain
# (Secret Service on Linux, Keychain on macOS, Credential Manager on Windows).
genai = "0.5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
futures = { workspace = true }

# Document Upload + RAG — Feature 2 (Tier 1).
# - `rusqlite` 0.39 ships SQLite 3.46+ with the FTS5 extension built into
#   the `bundled` source — there's no separate `fts5` feature flag.  We
#   ALSO enable `vtab` (used by FTS5 internally) and `modern_sqlite` to
#   get the latest BM25 implementation.
# - `lopdf` = pure-Rust PDF parser (no native FFI, perfect for cargo-install
#   on every platform).  We keep PDF support to lopdf only at Tier 1 — the
#   App tier adds pdfium-render for pixel-perfect citation previews.
# - `pulldown-cmark` = CommonMark + GFM parser, used to strip Markdown to
#   plain text before chunking.
# - `walkdir` already in workspace, used for `--recursive` ingest.
# - `sha2` already in workspace, used for content-hash deduplication.
rusqlite = { version = "0.39", features = ["bundled", "vtab", "modern_sqlite"] }
lopdf = "0.40"
pulldown-cmark = "0.13"
sha2 = { workspace = true }
walkdir = { workspace = true }

# Global Digest — Feature 3 (Tier 1).  See workspace.dependencies for
# rationale.  `reqwest` carries the RSS HTTP fetch (feed-rs parses bytes
# in-memory; it does NOT do its own network I/O).
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
feed-rs = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

# Code Interpreter Sandbox — Feature 5 (Tier 1).
# - `wasmtime` 27 = stable WASI-preview-2 runtime, MSRV 1.80 (matches
#   workspace).  We deliberately stay on 27.x to keep the CLI installable
#   on older toolchains; impforge-app upgrades to 43.x for WASIp3
#   stream/future support.
# - `wasmtime-wasi` 27 = matched WASI bindings (preopen filesystems,
#   stdin/stdout/stderr, environment).  We use only the basic preview-2
#   surface — fuel for CPU limits, memory_size_max for RAM.
# - License: Apache-2.0 WITH LLVM-exception (MIT-compatible).
wasmtime = { version = "27", default-features = false, features = ["runtime", "wat", "cranelift", "std"] }
wasmtime-wasi = "27"

[dev-dependencies]
tempfile = { workspace = true }
# `wat` 1 = WebAssembly Text → binary compiler.  Used in unit tests
# to inline tiny no-op / fuel-bomb / memory-bomb modules without
# shipping any binary fixture file.
wat = "1"
