# SPDX-License-Identifier: MIT
[package]
name = "impforge-crown-jewel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Crown-Jewel Guardian — 5-dimension code-quality enforcement: (1) no stubs, (2) no #[allow(*)], (3) no lonely .unwrap(), (4) every pub fn has a test, (5) Crown-Jewel wiring check.  The built-in quality gate that refuses sloppy AI-generated code."
readme = "../../README.md"

[dependencies]
impforge-core = { path = "../impforge-core" }
impforge-emergence = { path = "../impforge-emergence" }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
