# SPDX-License-Identifier: MIT
[package]
name = "impforge-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Signal / Telegram / WhatsApp bridge for impforge-cli — lets users send commands from their phone to their local freemium CLI."
readme = "../../README.md"

[dependencies]
impforge-core = { path = "../impforge-core" }
impforge-emergence = { path = "../impforge-emergence" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
