# SPDX-License-Identifier: MIT
[package]
name = "impforge-universal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Universal tool-protocol adapter — bridges ANY MCP server to ANY model/client.  N×M → N+M adapters via ToolProvider / UniversalTool / ToolConsumer traits.  ReAct + GBNF fallbacks so even no-function-call models (Qwen3-8B, Llama-3.2-3B, Phi-4) become first-class tool callers."
readme = "../../README.md"

[dependencies]
impforge-core = { path = "../impforge-core" }
impforge-emergence = { path = "../impforge-emergence" }
impforge-mcp-server = { path = "../impforge-mcp-server" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
